# shumai

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.cjs  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  docs.md  package.json  setup.sh  shumai.ts  test.ts  test_file.py  tsconfig.json  tsconfig.typedoc.json
.circleci/: config.yml
.github/scripts/: dlopen.cpp  install_arrayfire-shumai-flashlight-linux-amd64-cpu.sh  install_arrayfire-shumai-flashlight-linux-arm64-cpu.sh
.github/workflows/: build.yml
docs/: index.html  modules.html
docs/assets/: highlight.css  search.js
docs/classes/: Tensor.html  module.LSTM.html  module.LayerNorm.html  module.Linear.html  module.Module.html  module.Sequential.html  module.TransformerDecoder.html  module.TransformerDecoderLayer.html  module.TransformerDotProductAttention.html  module.TransformerEncoder.html  module.TransformerEncoderLayer.html  module.TransformerMultiheadAttention.html  module.TransformerPositionalEncoding.html  util.Float16Array.html
docs/enums/: dtype.html
docs/functions/: _var.html  abs.html  absolute.html  add.html  all.html  amax.html  amin.html  any.html  arange.html  argmax.html  argmin.html  backward.html  bitwiseAnd.html  bitwiseOr.html  bitwiseXor.html  bytesUsed.html  ceil.html  clamp.html  clip.html  concat.html  concatenate.html  conv2d.html  conv2dBackwardData.html  cos.html  countNonzero.html  cumsum.html  div.html  elu.html  eq.html  erf.html  exp.html  eye.html  flip.html  floor.html  full.html  greaterThan.html  greaterThanEqual.html  gt.html  gte.html  hardTanh.html  (+92 more)
docs/interfaces/: TensorInterface.html  TensorOpsInterface.html
docs/modules/: io.html  loss.html  module.html  network.html  optim.html  util.html
docs/types/: io.OpStats.html  io.RouteStats.html  io.ServeOpts.html  io.TensorOpStats.html  loss.LossFn.html  network.OpStats.html  network.RouteStats.html  network.TensorOpStats.html  optim.OptimizerFn.html  (+1 more)
examples/: bench.ts  cifar.ts  client.ts  get_cifar.sh  ident.js  messyBench.ts  model.ts  remote_runner_example.ts  serve.ts  serve_runner_example.ts  simple_model.ts  test.ts  tidyBench.ts  train.js  train.ts
python_comparison/: CMakeLists.txt  ffi.py  ffi.ts  fib.py  fib.ts  file.py  file.ts  js_binding.cc  number.py  number.ts  train.js  train.py
scripts/: build.sh  gen_all_binding.sh  gen_binding.py  npm_README.md  ops.doc  publish.sh  shumai.py
shumai/: index.ts  run.ts
src/: modules.ts
test/: Float16Array.test.ts  LayerNorm.test.ts  activations.test.ts  all.test.ts  any.test.ts  argmax.test.ts  argmin.test.ts  async.test.ts  basic_ops.test.ts  concatenate.test.ts  conv.disabled.ts  conv.test.ts  conv2dBackward.disabled.ts  conv2dBackward.test.ts  cos.test.ts  cumsum.test.ts  dispose.test.ts  dltensor.test.ts  dltensor.ts  dtype.test.ts  erf.test.ts  eval.test.ts  flip.test.ts  gradient.test.ts  greaterThan.test.ts  greaterThanEqual.test.ts  index.test.ts  io.test.ts  isinf.test.ts  isnan.test.ts  lessThan.test.ts  lessThanEqual.test.ts  linear.test.ts  log1p.test.ts  logicalAnd.test.ts  logicalNot.test.ts  logicalOr.test.ts  loss.test.ts  lstm.test.ts  matmul.test.ts  (+26 more)
(+113 files in other folders)
